package Product;

public abstract class DiagramProduct{
    public abstract void createProduct();
}
