@startuml

class Client

interface DiagramFactory{
    +createProduce()
}

abstract DiagramProduct {
    +createProduct()
}


Client --> DiagramFactory :依赖关系
DiagramFactory <|.. ColumnDiagramFactory
DiagramFactory <|.. LineDiagramFactory

DiagramProduct <|-- ColumnDiagram
DiagramProduct <|-- LineDiagram

DiagramProduct <.. DiagramFactory :依赖关系

@enduml

